# hyperspy-ml

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGES.rst  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/instructions/: python.instructions.md  tests.instructions.md
.github/workflows/: compliance.yml  tests.yml
doc/: conf.py  index.rst
doc/reference/: machine_learning.rst
doc/user_guide/: bss.rst  clustering.rst  decomposition.rst  export_results.rst  index.rst  migration.rst  visualize_results.rst
hyperspy_ml/: __init__.py  _mva.py  _mva_legacy.py  api.py  compat.py
hyperspy_ml/pipeline/: __init__.py  pipeline.py
hyperspy_ml/plotting/: __init__.py  _helpers.py  bss.py  cluster.py  components.py  scree.py
hyperspy_ml/results/: __init__.py  base.py  io.py  learning_results.py
hyperspy_ml/stages/: __init__.py  _lazy_decomposition.py  bss.py  clustering.py  decomposition.py
hyperspy_ml/study/: __init__.py  study.py
hyperspy_ml/tests/: NOTE_LEGACY_TESTS.txt  conftest.py  test_7b_7e.py  test_bss.py  test_bss_stage.py  test_cluster.py  test_clustering_stage.py  test_coverage_gaps.py  test_coverage_gaps2.py  test_coverage_gaps3.py  test_decomposition.py  test_decomposition_stage.py  test_deprecation_factors_loadings.py  test_export.py  test_incremental.py  test_lazy_decomposition.py  test_lazy_decomposition_stage.py  test_learning_results.py  test_mlpca.py  test_model_reconstruction.py  test_ornmf.py  test_plotting.py  test_preprocessing.py  test_regression_bitidentical.py  test_results.py  test_rpca.py  test_scree_plot.py  test_svd_pca.py  test_whitening.py
hyperspy_ml/utils/: __init__.py  preprocessing.py
scripts/: check-ai-co-author.py  check-docs.py  ci-check-ai-trailers.py  ci-check-changelog.py
upcoming_changes/: README.rst
